apps/deepseek-v4-flash/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek-v4-flash
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: deepseek-v4-flash
    app.kubernetes.io/name: deepseek-v4-flash
  ports:
    - name: http
      port: 8000
      targetPort: http
